# api/controllers/orders.js
@@ -3,24 +3,36 @@ const baseUrl = require("./../../config/urlConf");
 var util = require('util');
 const Order = require('../models/order.js');
 const User = require('../models/users.js');
+const Comfirmation = require('../models/confirmation');
+const Process = require('../models/process.js');
+
 const Chart = require('../models/chart');
 const shortid = require('shortid');
+const Image = require('../models/image.js');
 exports.findAll = findAll;
 const multer = require('multer');
 const upload = multer({dis:'paints/'});
+var path = require('path');
 const fs = require('fs');
-
+var calculateCost = require('./../services/calculateCost');
 exports.create = (req, res) => {
-
+  calculateCost(req.body.quantity,req.body.stamping,req.body.dyeingColor,function(total) {
     var id = shortid.generate();
     var  imgUrl = null;
-    if (req.body.stampingImg === true){
+    var stampingImgUploaded = false;
+    if (req.body.stamping === true){
         imgUrl= baseUrl.baseURL+"order/"+id+"/stampingImg";
     }
+
     const order = new Order({
         _id: id,
-        stampingImg: req.body.stampingImg,
-        dyeingColor: req.body.dyeingColor,
+        stamping: req.body.stamping,
+        StampingImage:
+            {
+                link:imgUrl,
+                uploaded: stampingImgUploaded
+            },
+        dyeingColor: req.body.dyeingColor || "",
         quantity: req.body.quantity,
         deliveryDate: req.body.deliveryDate,
         deliveryPlace: req.body.deliveryPlace,
@@ -61,7 +73,8 @@ exports.create = (req, res) => {
             }
         ,
         confirmed: false,
-        totalCost: 12,
+        totalCost:  total
+,
         currency: "$",
         status: "pending"
 
@@ -74,6 +87,7 @@ exports.create = (req, res) => {
             message: err.message || "Some error occurred while creating the Order."
         });
 });
+    });
 };
 // Retrieve and return all Orders from the database.
 function  findAll (req, res) {
@@ -94,7 +108,7 @@ function  findAll (req, res) {
             message: err.message || "Some error occurred while retrieving Orders."
         });
     });
-};
+}
 // Find a single Order with a OrderId
 exports.findOne = (req, res) => {
     Order.findById(req.params.orderId)
@@ -118,19 +132,8 @@ exports.findOne = (req, res) => {
 };
 // Update a order identified by the OrderId in the request
 exports.update = (req, res) => {
-    // Validate Request
-    if(!req.body.orderName || !req.body.email || !req.body.password) {
-        return res.status(400).send({
-            message: "order name and email and password can not be empty"
-        });
-    }
-
     // Find Order and update it with the request body
-    Order.findByIdAndUpdate(req.params.orderId, {
-        orderName: req.body.orderName ,
-        email: req.body.email,
-        password: req.body.password
-    }, {new: true})
+    Order.findByIdAndUpdate(req.params.orderId, {status:req.body.status})
         .then(order => {
             if(!order) {
                 return res.status(404).send({
@@ -170,63 +173,148 @@ exports.delete = (req, res) => {
         });
     });
 };
+exports.postImg = (req, res) => {
+    var img = fs.readFileSync(req.file.path);
+    var encode_image = img.toString('base64');
+    // Define a JSONobject for the image attributes for saving to database
+    Order.findById(req.params.orderId).then(order => {
+        if (!order) {
+            return res.status(404).send({
+                message: "cannot upload image : order not found with id " + req.params.orderId
+            });
+        }
+        else if ((order.stamping === false ) || (order.StampingImage.uploaded === true)){
+            return res.status(400).send({
+                message: "cannot upload image : you didn't request a stamping image or you already uploaded it  "
+            });
+        }else {
+            var id = shortid.generate();
+            const image = new Image({
+                _id: id,
+                contentType: req.file.mimetype,
+                image:  Buffer.from(encode_image, 'base64'),
+                _links: {
+                    self: {
+                        href: baseUrl.baseURL + "order/" + req.params.orderId +"/stampingImg"
+                    },
+                    owner: {
+                        href: baseUrl.baseURL + "user/" + req.username,
+                        userName:  req.username
+                    },
+                    order: {
+                        href:  baseUrl.baseURL + "order/" + req.params.orderId,
+                        orderId: req.params.orderId
+                    }
+                }
+            });
+            image.save()
+                .then(data => {
+                    res.json({
+                            _id: id,
+                            contentType:req.file.mimetype,
+                        _links: {
+                            self: {
+                                href: baseUrl.baseURL + "order/" + req.params.orderId +"/stampingImg"
+                            },
+                            owner: {
+                                href: baseUrl.baseURL + "user/" + req.username,
+                                userName:  req.username
+                            },
+                            order: {
+                                href:  baseUrl.baseURL + "order/" + req.params.orderId,
+                                orderId: req.params.orderId
+                            }
+                        }
+                        }
+                    );
+                    Order.findByIdAndUpdate(req.params.orderId)
+                        .then(order => {
+                            order.StampingImage.uploaded = true;
+                            console.log(order);
+                            order.save();
+                        });
 
-
-// Find a single Order with a OrderId
-exports.getChart = (req, res) => {
-    Chart.findById(req.params.chartName, {'chart': true})
-        .then(chart => {
-           // res.sendFile(__dirname + "/1_lR6oU5-XKHH_8I9S-hjOqg.png");
-            if(!chart) {
+                }).catch(err => {
+                res.status(500).send({
+                    message: err.message || "Some error occurred while creating the Order."
+                });
+            });
+        }
+    });
+};
+exports.getImg = (req, res) => {
+    Image.findOne({"_links.order.orderId":req.params.orderId})
+        .then(image => {
+            if(!image) {
                 return res.status(404).send({
-                    message: "Chart not found with id " + req.params.chartName
+                    message: "cannot find Image: Order not found with id " + req.params.orderId
                 });
             }
-       //     res.send(chart);
-
             res.contentType('image/jpeg');
-            res.end(chart,"binary");
+            res.send(image.image);
+
         }).catch(err => {
         if(err.kind === 'ObjectId') {
             return res.status(404).send({
-                message: "chart not found with id " + req.params.chartName
+                message: "cannot find image" + req.params.orderId
             });
         }
         return res.status(500).send({
-            message: "Error retrieving chart with id " + req.params.chartName
+            message: "Error retrieving Order with id " + req.params.orderId
         });
     });
 };
-exports.postChart = (req, res) => {
-
-    // Validate request
-    console.log("Create was called");
-console.log(req.file);
-
-    // Create a Order
-    var id=shortid.generate();
-
-    const chart = new Chart({
-        _id : id,
-        chart: fs.readFileSync("A:\\fabricCompany\\fabric2\\api\\paints\\"),
+exports.postConfirmation = (req, res) => {
+    var id = shortid.generate();
+    const comfirmation = new Comfirmation({
+        _id: id,
+        confirmation: req.body.confirmation,
         _links: {
-            self:{
-                href: baseUrl.baseURL+ "order/chart/"+id
+            self: {
+                href: baseUrl.baseURL + "order/" + req.params.orderId +"/confirmation"
+            },
+            owner: {
+                href: baseUrl.baseURL + "user/" + req.username
+            },
+            order: {
+                href: baseUrl.baseURL + "order/"+req.params.orderId,
+                orderId:req.params.orderId
             }
         }
     });
-
-    // Save Order in the database
-    chart.save()
+    Order.findByIdAndUpdate(req.params.orderId)
+        .then(order => {
+            order.confirmed = true;
+            order.save();
+        });
+    comfirmation.save()
         .then(data => {
-            //  res.header("Access-Control-Allow-Origin", "*");
-            //  res.header("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept");
-
             res.status(201).send(data);
-
         }).catch(err => {
         res.status(500).send({
             message: err.message || "Some error occurred while creating the Order."
+        });
+    });
+};
+exports.getConfirmation = (req, res) => {
+    Comfirmation.findOne({"_links.order.orderId":req.params.orderId})
+        .then(confirmation => {
+            if(!confirmation) {
+                return res.status(404).send({
+                    message: "cannot find confirmation link: Order not found with id " + req.params.orderId
+                });
+            }
+
+            res.send(confirmation);
+
+        }).catch(err => {
+        if(err.kind === 'ObjectId') {
+            return res.status(404).send({
+                message: "cannot find image" + req.params.orderId
+            });
+        }
+        return res.status(500).send({
+            message: "Error retrieving Order with id " + req.params.orderId
         });
     });
 };
